--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -44,6 +44,14 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
+          if [ -f "stats.json" ]; then
+            git add stats.json
+            git commit -m "Update release statistics"
+            git push
+          else
+            echo "ERROR: stats.json not found!"
+            exit 1
+          fi
           git add stats.json
           git commit -m "Update release statistics"
           git push
