--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,10 +2,10 @@ name: Collect Release Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Запускать каждый день в полночь по UTC
-  workflow_dispatch: # Разрешить ручной запуск
+    - cron: '0 0 * * *' # Daily at midnight UTC
+  workflow_dispatch:
   release:
-    types: [published] # Запускать при новом релизе
+    types: [published]
 
 jobs:
   collect-stats:
@@ -13,11 +13,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
+        with:
+          fetch-depth: 0 # Полная история коммитов
+          
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
+          cache: 'npm'
           
       - name: Install dependencies
         run: npm install @octokit/rest
@@ -27,31 +30,26 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: node .github/scripts/collect-stats.js
-
-      - name: List files (debug)
-        run: ls -la
         
-      - name: Check if stats.json exists
+      - name: Verify stats.json
         run: |
+          echo "Current directory: $(pwd)"
+          ls -la
+          
           if [ -f "stats.json" ]; then
-            echo "stats.json exists"
+            echo "stats.json content:"
+            cat stats.json
+            echo "File exists and has content"
           else
-            echo "stats.json NOT FOUND"
+            echo "ERROR: stats.json not created!"
             exit 1
           fi
-        
+          
       - name: Commit and push stats
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          if [ -f "stats.json" ]; then
-            git add stats.json
-            git commit -m "Update release statistics"
-            git push
-          else
-            echo "ERROR: stats.json not found!"
-            exit 1
-          fi
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          
           git add stats.json
-          git commit -m "Update release statistics"
+          git commit -m "Update release statistics [skip ci]"
           git push
