--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,7 +2,7 @@ name: Collect Release Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Daily at midnight UTC
+    - cron: '0 0 * * *'
   workflow_dispatch:
   release:
     types: [published]
@@ -13,7 +13,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
+        with:
+          # Ключевое изменение: получаем полную историю и права на запись
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run stats collector
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -24,15 +28,16 @@ jobs:
           
       - name: Verify stats.json
         run: |
-          echo "Generated stats.json:"
-          cat stats.json
           [ -f "stats.json" ] || exit 1
+          echo "File exists"
           
       - name: Commit and push stats
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "github-actions"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
           git add stats.json
           git commit -m "Update release statistics"
-          git push
+          
+          # Используем специальную команду для push с токеном
+          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
