--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -24,7 +24,7 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           chmod +x .github/scripts/collect-stats.sh
-          .github/scripts/collect-stats.sh
+          .github/scripts/collect-stats.sh || exit 1
           
       - name: Verify stats.json
         run: |
