--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -23,21 +23,39 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
-          chmod +x .github/scripts/collect-stats.sh
-          .github/scripts/collect-stats.sh || exit 1
+          # Создаем директорию для скриптов, если её нет
+          mkdir -p .github/scripts
           
+          # Копируем скрипт
+          cp .github/workflows/collect-stats.sh .github/scripts/collect-stats.sh
+          
+          # Делаем скрипт исполняемым
+          chmod +x .github/scripts/collect-stats.sh
+          
+          # Запускаем скрипт
+          .github/scripts/collect-stats.sh
+          
+          # Проверяем результат
+          cat stats.json
+      
       - name: Verify stats.json
         run: |
           [ -f "stats.json" ] || exit 1
-          echo "File exists"
-          
+          [ -f "historical_data.json" ] || exit 1
+          echo "Files exist"
+      
       - name: Commit and push stats
         run: |
           git config user.name "github-actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
           git add stats.json
-          git commit -m "Update release statistics"
+          git add historical_data.json
           
-          # Используем специальную команду для push с токеном
-          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
+          # Проверяем есть ли что коммитить
+          if git diff-index --quiet HEAD --; then
+              echo "No changes to commit"
+          else
+              git commit -m "Update release statistics and historical data"
+              git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
+          fi
