--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,7 +2,7 @@ name: Collect Release Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *'  # Каждый день в 00:00
   workflow_dispatch:
   release:
     types: [published]
@@ -14,7 +14,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          # Ключевое изменение: получаем полную историю и права на запись
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -23,13 +22,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
-          # Создаем директорию для скриптов, если её нет
-          mkdir -p .github/scripts
+          # Проверяем существование скрипта
+          if [ ! -f ".github/scripts/collect-stats.sh" ]; then
+            echo "Error: Script not found at .github/scripts/collect-stats.sh"
+            exit 1
+          fi
           
-          # Копируем скрипт
-          cp .github/workflows/collect-stats.sh .github/scripts/collect-stats.sh
-          
-          # Делаем скрипт исполняемым
+          # Убедимся, что скрипт исполняемый
           chmod +x .github/scripts/collect-stats.sh
           
           # Запускаем скрипт
@@ -37,13 +36,14 @@ jobs:
           
           # Проверяем результат
           cat stats.json
-      
-      - name: Verify stats.json
+          cat historical_data.json
+
+      - name: Verify files
         run: |
           [ -f "stats.json" ] || exit 1
           [ -f "historical_data.json" ] || exit 1
           echo "Files exist"
-      
+
       - name: Commit and push stats
         run: |
           git config user.name "github-actions"
@@ -52,10 +52,10 @@ jobs:
           git add stats.json
           git add historical_data.json
           
-          # Проверяем есть ли что коммитить
+          # Проверяем изменения
           if git diff-index --quiet HEAD --; then
-              echo "No changes to commit"
+            echo "No changes to commit"
           else
-              git commit -m "Update release statistics and historical data"
-              git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
+            git commit -m "Update release statistics and historical data"
+            git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
           fi
