--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,7 +2,7 @@ name: Collect Release Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Каждый день в 00:00
+    - cron: '0 * * * *'  # Каждый день в 00:00
   workflow_dispatch:
   release:
     types: [published]
